ecrant de chargement fin scss

--- a/Ohmyfood/sass/Layout/_loader.scss
+++ b/Ohmyfood/sass/Layout/_loader.scss
@@ -41,3 +41,27 @@
     left: 50%;
     animation: rotate 1s linear infinite;
   }
+  .loader__food span:nth-child(1) {
+    animation: grow 1s ease-in-out infinite;
+  }
+  .loader__food span:nth-child(2) {
+    animation: grow 1s ease-in-out 0.15s infinite;
+  }
+  .loader__food span:nth-child(3) {
+    animation: grow 1s ease-in-out 0.15s infinite;
+  }
+  .loader__food span:nth-child(4) {
+    animation: grow 1s ease-in-out 0.15s infinite;
+  }
+  .loader__food span:nth-child(5) {
+    animation: grow 1s ease-in-out 0.15s infinite;
+  }
+  .loader__food span:nth-child(6) {
+    animation: grow 1s ease-in-out 0.15s infinite;
+  }
+  .loader__food span:nth-child(7) {
+    animation: grow 1s ease-in-out 0.15s infinite;
+  }
+  .loader__food span:nth-child(8) {
+    animation: grow 1s ease-in-out 0.15s infinite;
+  }
